# lopper

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  index.html  params.json
jni/: Android.mk  Application.mk
lopper/: constants.hpp  context.hpp  expression.hpp  image.hpp  io.hpp  lopper.hpp  multiple.hpp  operations.hpp  platform.hpp  primitives.hpp  storage.hpp  util.hpp
tests/: test_expressions.cpp  test_primitives.cpp
